[package]
name = "binance-quote-bridge"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = { version = "0.15.0", features = ["native-tls"] }
futures-util = "0.3.17"
futures = "0.3.17"
tokio-tungstenite = "0.15"
tokio = { version = "1.12", features = ["full"] }
reqwest = { version = "0.11", features = ["json"], default-features = false }
futures-channel = "0.3.17"
chrono = "0.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
substring = "1.4.5"
prometheus = { version = "0.13.0"}
stopwatch = "0.0.7"
hyper = { version = "0.14", features = ["full"] }


[features]
rustls-tls = ["tungstenite/rustls-tls-webpki-roots", "tokio-tungstenite/rustls-tls", "reqwest/rustls-tls"]
native-tls = ["tungstenite/native-tls", "tokio-tungstenite/native-tls", "reqwest/default-tls"]
default = ["native-tls"]